<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mythling</string>
    <string name="menu_videos">Videos</string>
    <string name="menu_music">Music</string>
    <string name="menu_recordings">Recordings</string>
    <string name="menu_tv">Live TV</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_tv_series">TV Series</string>
    <string name="menu_search_results">Search Results</string>
    <string name="menu_view">View</string>
    <string name="menu_list">List</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_split">Split</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_byTitle">By Title</string>
    <string name="menu_byDate">By Date</string>
    <string name="menu_byRating">By Rating</string>
    <string name="menu_byGroup">By Group</string>
    <string name="menu_byChannel">By Channel</string>
    <string name="menu_byCallsign">By Callsign</string>
    <string name="menu_help">Help</string>
    <string name="menu_guide">Program Guide</string>
    <string name="menu_mythweb">MythWeb</string>
    <string name="menu_play">Play</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_categories">Mythling</string>
    <string name="title_activity_welcome">Welcome to Mythling</string>
    <string name="title_activity_sub_cats">Mythling</string>
    <string name="title_activity_prefs">Mythling</string>
    <string name="title_activity_search">Mythling</string>
    <string name="title_activity_pager">Mythling</string>
    <string name="title_activity_webview">Mythling</string>
    <string name="title_activity_guide">Mythling</string>
    <string name="title_video_player">Video Player</string>
    <string name="init_setup_host">Enter your MythTV host to get started</string>
    <string name="title_prefs_playback">Playback</string>
    <string name="summary_prefs_playback">Media player selection and settings</string>
    <string name="title_prefs_network">Network</string>
    <string name="summary_prefs_network">MythTV backend host settings</string>
    <string name="title_prefs_connect">Connect</string>
    <string name="summary_prefs_connect">MythTV backend and playback settings</string>
    <string name="title_prefs_connections">Connections</string>
    <string name="summary_prefs_connections">Backend ports and paths</string>
    <string name="title_prefs_credentials">Authentication</string>
    <string name="summary_prefs_credentials">HTTP auth modes and credentials</string>
    <string name="title_prefs_categories">Categories</string>
    <string name="summary_prefs_categories">How media should be categorized</string>
    <string name="title_prefs_guide">Program Guide</string>
    <string name="summary_prefs_guide">Settings for Mythling EPG</string>
    <string name="title_prefs_artwork">Artwork</string>
    <string name="summary_prefs_artwork">Media artwork options</string>
    <string name="title_prefs_video_quality">HLS Video Quality</string>
    <string name="title_streaming_quality">HLS Streaming Quality</string>
    <string name="title_hls_video_quality">HTTP Live Stream Quality</string>
    <string name="summary_prefs_video_quality">HTTP Live Stream settings</string>
    <string name="title_prefs_caching">Data Cache</string>
    <string name="summary_prefs_caching">Media list data cache</string>
    <string name="title_prefs_system">System</string>
    <string name="summary_prefs_system">Operational Parameters</string>
    <string name="title_playback_settings">Playback Settings</string>
    <string name="title_network_settings">Network Settings</string>
    <string name="title_connect">Connect</string>
    <string name="title_connect_settings">Connection Settings</string>
    <string name="title_credentials_settings">Authentication Settings</string>
    <string name="title_categories_settings">Category Settings</string>
    <string name="title_guide_settings">Program Guide Settings</string>
    <string name="title_guide">Program Guide</string>
    <string name="title_quality_settings">HLS Video Quality Settings</string>
    <string name="title_video_quality">Video Quality</string>
    <string name="title_cache_settings">Data Cache Settings</string>
    <string name="title_system_settings">System Settings</string>
    <string name="title_prompt_for_playback_options">Prompt for Playback Options</string>
    <string name="title_save_position_on_exit">Save Position on Exit</string>
    <string name="title_proxy_android_authenticated_playback">Proxy Android Authenticated Playback</string>
    <string name="title_skip_forward_interval">Skip Forward Interval</string>
    <string name="message_skip_forward_interval">Seconds to skip ahead when the Skip Forward button is pressed.</string>
    <string name="title_skip_back_interval">Skip Back Interval</string>
    <string name="message_skip_back_interval">Seconds to skip backward when the Skip Back button is pressed</string>
    <string name="title_jump_interval">Jump Interval</string>
    <string name="message_jump_interval">Seconds to skip forward or backward when a Jump button is pressed</string>
    <string name="title_auto_skip">Commercial Skip (MythTV 0.28+)</string>
    <string name="dlg_title_auto_skip">Commercial Skip (requires MythTV 0.28+ or Mythling media services)</string>
    <string name="notify_auto_skip_">Auto-Skip:\u0020</string>
    <string-array name="auto_skip_values">
        <item>auto_skip_off</item>
        <item>auto_skip_notify</item>
        <item>auto_skip_on</item>
    </string-array>
    <string-array name="auto_skip_entries">
        <item>Auto-Skip Off</item>
        <item>Auto-Skip Notify</item>
        <item>Auto-Skip On</item>
    </string-array>
    <string name="title_seek_correction_tolerance">Seek Correction Tolerance</string>
    <string name="message_seek_correction_tolerance">If greater than zero, inaccurate seeks will be reattempted until tolerance (in seconds) is achieved.  Set to 2&#8211;3 seconds if auto-skip is enabled.  Set to -1 if you don\u0027t care and never want to see the duration mismatch warning.</string>
    <string name="title_libvlc_parameters">LibVLC Parameters</string>
    <string name="message_libvlc_parameters" tools:ignore="TypographyDashes">VLC engine and media options (eg: --audio-time-stretch :codec=all).
      Media options can be prefixed to apply for a specific file extension.  For example, mpg:demux=ts (compatibility for TS-container mpg files in MythTV 0.28).</string>
    <string name="title_frontend_host">Host</string>
    <string name="title_frontend_host_dialog">Frontend Host</string>
    <string name="message_frontend_host">Host name or IP address for frontend playback</string>
    <string name="title_frontend_socket_port">Socket Port</string>
    <string name="title_frontend_socket_port_dialog">Frontend Socket Control Port</string>
    <string name="message_frontend_socket_port">TCP port for frontend control socket connection</string>
    <string name="title_frontend_service_port">Service Port</string>
    <string name="title_frontend_service_port_dialog">Frontend Service Port</string>
    <string name="message_frontend_service_port">HTTP port for frontend service connection</string>
    <string name="title_video_categorization">Categorization</string>
    <string name="title_video_categorization_dialog">Video Categorization</string>
    <string name="title_categorize_videos">Videos</string>
    <string name="title_categorize_transcoding">Transcoding by File Type</string>
    <string name="title_categorize_internet">Internet</string>
    <string name="title_movie_base_url">Movie Base URL</string>
    <string name="message_movie_base_url">Base URL for Movie detail links</string>
    <string name="title_tv_base_url">TV Base URL</string>
    <string name="message_tv_base_url">Base URL for TV Series detail links</string>
    <string name="title_custom_base_url">Custom Base URL</string>
    <string name="message_custom_base_url">URL-encoded title is appended to this base</string>
    <string name="title_mythtv_backend">MythTV Backend</string>
    <string name="title_content_services">Content Services</string>
    <string name="title_mythling">Mythling</string>
    <string name="title_version">Version</string>
    <string name="title_mythling_version">Mythling Version</string>
    <string name="title_operation_timeouts">Backend Operations</string>
    <string name="title_http_timeouts">HTTP</string>
    <string name="title_tuner_timeout">Tuner Timeout</string>
    <string name="title_tuner_timeout_dialog">Tuner Timeout (seconds)</string>
    <string name="title_transcode_timeout">Transcode Timeout</string>
    <string name="title_transcode_timeout_dialog">Transcode Timeout (seconds)</string>
    <string name="title_tuner_limit">Tuner Limit</string>
    <string name="title_transcode_job_limit">Transcode Job Limit</string>
    <string name="message_tuner_limit">Backend tuners available for simultaneous recordings (0 = No limit &#8212; Just let recordings fail)</string>
    <string name="message_transcode_job_limit">Maximum number of simultaneous HLS transcoding jobs Mythling will request (0 = No limit)</string>
    <string name="title_connect_timeout">Connect Timeout</string>
    <string name="title_connect_timeout_dialog">Connect Timeout (seconds)</string>
    <string name="title_read_timeout">Read Timeout</string>
    <string name="title_read_timeout_dialog">Read Timeout (seconds)</string>
    <string name="title_backend_host">Host</string>
    <string name="title_backend_host_dialog">Backend Host</string>
    <string name="message_backend_host_port">Backend host name or IP address</string>
    <string name="title_web_server">Backend Web Server</string>
    <string name="title_media_services">Media Services</string>
    <string name="title_web_port">Web Port</string>
    <string name="message_web_port">For Mythling media services and MythWeb access</string>
    <string name="title_mythling_web_root">Mythling Web Root</string>
    <string name="message_mythling_web_root">Path under Apache DocumentRoot directory where Mythling\'s media.php resides</string>
    <string name="default_mythling_web_root">mythling</string>
    <string name="title_mythtv_service_port">MythTV Service Port</string>
    <string name="title_directories_movies">Movie Directories</string>
    <string name="title_directories_tv_series">TV Series Directories</string>
    <string name="title_directories_exclude">Excluded Directories</string>
    <string name="title_retrieve_transcode_statuses">Retrieve Transcode Statuses</string>
    <string name="title_transcode_hls">Transcode to HLS</string>
    <string name="title_stream_raw">Stream Raw File</string>
    <string name="title_error_reporting">Error Reporting</string>
    <string name="message_directories_movies">Comma-separated list of video directory paths containing movies (relative to storage dir)</string>
    <string name="message_directories_tv_series">Comma-separated list of video directory paths containing TV series\' (relative to storage dir)</string>
    <string name="message_directories_exclude">Comma-separated list of video directory paths to exclude (relative to storage dir)</string>
    <string name="message_transcode_hls">Comma-separated list of filename extensions to always transcode to HTTP Live Streams for playback</string>
    <string name="message_stream_raw">Comma-separated list of filename extensions to always stream raw without on-demand transcoding</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="mythling">Mythling</string>
    <string name="mythtv">MythTV</string>
</resources>