<!--
  Copyright 2015 Donald Oakes
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
       http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory android:title="@string/title_mythtv_backend">
        <EditTextPreference
            android:key="mythbe_internal_host"
            android:title="@string/title_backend_host"
            android:dialogTitle="@string/title_backend_host_dialog"
            android:dialogMessage="@string/message_backend_host_port"
            android:layout="@layout/pref" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/title_video_player">
        <CheckBoxPreference
            android:key="always_prompt_for_playback_options"
            android:title="@string/title_prompt_for_playback_options"
            android:defaultValue="false"
            android:layout="@layout/pref" />
        <CheckBoxPreference
            android:key="save_position_on_exit"
            android:title="@string/title_save_position_on_exit"
            android:defaultValue="true"
            android:layout="@layout/pref" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/title_error_reporting">
        <com.oakesville.mythling.prefs.firetv.FireTvSwitchPreference
            android:key="error_reporting"
            android:switchTextOn="@string/enabled"
            android:switchTextOff="@string/disabled"
            android:defaultValue="false"
            android:layout="@layout/sw_pref_inner"
            android:widgetLayout="@layout/prefs_switch" />
    </PreferenceCategory>    

    <PreferenceCategory android:title="@string/title_mythling_version">
      <Preference
          android:key="mythling_version"
          android:title="@string/title_version"
          android:layout="@layout/pref"
          android:selectable="false" />
    </PreferenceCategory>
    
</PreferenceScreen>